# Web_fast_API

./: .env.template  .gitignore  README.md  development.md  docker-compose.override.yml  docker-compose.yml  main.py  requirements.txt
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: crud.py  main.py  models.py  utils.py
backend/app/alembic/: env.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: clients.py  likes.py  login.py  utils.py
backend/app/core/: config.py  db.py  security.py
models/: clientsmodel.py  usermodel.py
routers/: clients.py
